# zpr-ewolucja-pojazdow

./: .gitignore  CMakeLists.txt  README.md  compile_run.sh  main.cc  ulation loaded!
include/: Box.h  Button.h  Car.h  Circle.h  EventHandlers.h  FileOperations.h  GA.h  Globals.h  Init.h  Render.h  ScrollableList.h  TextField.h  Triangle.h  Utils.h
src/: Box.cc  Button.cc  Car.cc  Circle.cc  EventHandlers.cc  FileOperations.cc  GA.cc  Globals.cc  Init.cc  Render.cc  ScrollableList.cc  TextField.cc  Triangle.cc  Utils.cc
tests/: tests.cc
